Unified JEI display for crafting and herding
(cherry picked from commit 880bc2ef4940ee46a7a66cf5679239c590eddeda)